# fastapi_react_tutorial

./: .gitignore  LICENSE  Makefile  README.md
backend/: .env.example  .gitignore  host.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 52d03c50d93a_add_phone_to_contact.py  82d1758683ac_initial_tables.py
backend/app/: config.py  database.py  main.py  model.py  security.py
backend/app/routers/: contacts.py  notes.py  users.py
backend/tests/: test_main.py
docs/: README.md  step-1-setup-and-hello-world.md  step-2-first-api.md  step-3-first-react-page.md  step-4-a-database.md  step-5-the-real-app.md  step-6-backend-architecture.md  step-7-config-auth-migrations.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  ContactDetail.jsx  ContactList.jsx
