[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "ruff>=0.15.21",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]

# Style / linting. PEP 8 via pycodestyle (E/W), pyflakes (F), and pep8-naming (N).
# Line length is set to 100 (PEP 8 allows relaxing the 79-char limit by team
# agreement); run with `uvx ruff check`.
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "N"]
